# dynamic-fluid

./: LICENSE  README.md  pyproject.toml
dynamic_fluid/: __init__.py  __main__.py  _license_gate.py  coda.py  coda0.py  coda2.py
dynamic_fluid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dynamic_fluid/CLASS/: Air_CLASS.py  Particle_CLASS.py
dynamic_fluid/FUNC/: cappo.py  config.py  fluid.py  fluid_type.py  func.py
dynamic_fluid/FUNC/num/: one.py  two.py
